--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">BS Generator</string>
     <string name="facebook_app_id">1042324632503081</string>
     <string name="play_store_link">http://play.google.com/store/apps/details?id=com.kgbapps.bsgenerator</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
